--- a/src/App.css
+++ b/src/App.css
@@ -283,6 +283,7 @@ main {
   color: white;
   border-radius: 5px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  z-index: 2;
 }
 .roll:hover {
   background: rgb(54, 114, 235);
@@ -326,12 +327,13 @@ main {
 .conf-container{
   width: 350px ;
   display: flex;
-  align-items: center;
-  justify-content: center;
   margin: auto;
+  position:absolute;
+  top: 0px;
+  top:-170px;
+  height: 120vh;
 }
 .conff{
   width: 350px;
   margin: auto;
-  height: 100%;
 }
